# tls-oracle-near

./: .env.example  .gitignore  CLAUDE.md  DOCS_RU.md  README.md  package-lock.json  package.json  render.yaml
backend/: config.js  server.js
backend/middleware/: auth.js
backend/routes/: api.js  auth.js
backend/services/: auth.js  db.js  near.js  prover-client.js
circuits/: attestation.circom  build.sh  input_generator.js  package.json  vk_to_rust.js
contract/: Cargo.toml  build.sh
contract/src/: bn254_types.rs  groth16.rs  lib.rs  vk_data.rs
frontend/: App.jsx  index.html  near-wallet.js  package-lock.json  package.json  vite.config.js
notary/: Cargo.toml  Dockerfile
notary/src/: main.rs
prover/: Cargo.toml  Dockerfile
prover/src/: main.rs  mpc_session.rs  url_validator.rs  zk_prover.rs
prover/zk/: generate_proof.js  package.json
scripts/: calc-notary-hash.cjs
