[package]
name = "tls-notary-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "notary-server"
path = "src/main.rs"

[dependencies]
# Криптография
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"

# HTTP сервер
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }

# Сериализация
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
hex = "0.4"

# HTTP клиент (для запросов к целевым серверам)
reqwest = { version = "0.12", features = ["json"] }
url = "2"

# Утилиты
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
